# my-renderer

./: .gitignore  ARCHITECTURE.md  CRATES_REFERENCE.md  Cargo.toml  LEARNING_LOG.md  README.md  STUDY_GUIDE.md  build.rs  config.toml
shaders/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv
src/: bevy_integration.rs  config.rs  lib.rs  main.rs
src/backend/: buffer.rs  device.rs  mod.rs  pipeline.rs  shader.rs  swapchain.rs  sync.rs
