[package]
name = "my-renderer"
version = "0.1.0"
edition = "2021"

[features]
default = []
bevy = ["dep:bevy"]

[workspace]
# Empty workspace table to keep this independent from Kajiya's workspace

[dependencies]
# Bevy ECS and core (without default renderer) - OPTIONAL
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",              # Window management
    "bevy_render",             # Minimal render support (for window access)
], optional = true }

# Window and input (still needed for raw Vulkan)
winit = "0.30"
raw-window-handle = "0.6"

# Math (same as Kajiya uses)
glam = { version = "0.29", features = ["bytemuck"] }

# Vulkan - Native API for maximum performance
ash = "0.37"
ash-window = "0.12"
gpu-allocator = { version = "0.26", features = ["vulkan"] }

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"  # Faster mutexes than std

# Config file support
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Hot-reload support (file watching)
notify = "6.1"

# Optional: profiling
# puffin = "0.19"  # Uncomment when ready to profile

[profile.dev]
opt-level = 2  # Faster debug builds, still debuggable

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"  # Smaller binary, faster
strip = true     # Remove debug symbols
